force-app/main/default/objects/sugati__Rule__c/sugati__Rule__c.object-meta.xml
<CustomObject>
    <label>Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>