force-app/main/default/objects/sugati__Rule__c/fields/sugati__Base_Cancellation_Fee_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__Base_Cancellation_Fee_On__c</fullName>
    <label>Based Cancellation Charge On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selling Price</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Tours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>