force-app/main/default/objects/sugati__Rule__c/fields/sugati__Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__Country__c</fullName>
    <description>Country Picklist</description>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Countries</valueSetName>
    </valueSet>
</CustomField>