force-app/main/default/objects/sugati__Rule__c/fields/sugati__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>