force-app/main/default/objects/sugati__Rule__c/fields/sugati__R_Apply_to_Agency_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Apply_to_Agency_Sell_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply to Agency Sell Price</label>
    <type>Checkbox</type>
</CustomField>