force-app/main/default/objects/sugati__Rule__c/fields/sugati__R_Days_to_Departure_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Days_to_Departure_From__c</fullName>
    <label>Days to Departure From</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>