force-app/main/default/objects/sugati__Rule__c/fields/sugati__R_Days_to_Departure_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Days_to_Departure_To__c</fullName>
    <label>Days to Departure To</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>