force-app/main/default/objects/sugati__Rule__c/fields/sugati__R_Deposit_Only__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Deposit_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Only</label>
    <type>Checkbox</type>
</CustomField>