force-app/main/default/objects/sugati__Rule__c/fields/sugati__R_Percentage__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Percentage__c</fullName>
    <label>% of Booking Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>