force-app/main/default/objects/sugati__Rule__c/fields/sugati__R_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__R_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>