force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Additional_Cost_Amount_Based_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Additional_Cost_Amount_Based_On__c</fullName>
    <inlineHelpText>If the additional cost rule is Amount-based, determine whether the value should be applied per person or per client group</inlineHelpText>
    <label>Additional Cost Amount Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Person</fullName>
                <default>true</default>
                <label>Per Person</label>
            </value>
            <value>
                <fullName>Per Client Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>