force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Additional_Cost_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Additional_Cost_Max_Amount__c</fullName>
    <inlineHelpText>The maximum amount an additional cost generated by this rule can apply to any single client group</inlineHelpText>
    <label>Additional Cost Max Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>