force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Additional_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Additional_Cost_Type__c</fullName>
    <label>Additional Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charitable Contribution</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>FX Fees</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Regulatory Fees</fullName>
            </value>
            <value>
                <fullName>Service Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>