force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Brand__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>sugati__Brand__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>