force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Confirmation_From_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Confirmation_From_Date__c</fullName>
    <label>Confirmation From Date</label>
    <type>Date</type>
</CustomField>