force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Due_Days__c</fullName>
    <inlineHelpText>Due Day which is + or - x number of days based on the Service Date</inlineHelpText>
    <label>Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>