force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_High_Band__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_High_Band__c</fullName>
    <label>High Band</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>