force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Payment_Due_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Payment_Due_Type__c</fullName>
    <label>Payment Due Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Confirmation</fullName>
            </value>
            <value>
                <fullName>End of Month after Serv Date</fullName>
            </value>
            <value>
                <fullName>End of Month of Confirmation</fullName>
            </value>
            <value>
                <fullName>Service Date</fullName>
            </value>
            <value>
                <fullName>Specific Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>