force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Percentage_Based_On_Field__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Percentage_Based_On_Field__c</fullName>
    <inlineHelpText>The API Name of the field at Client Group that the additional cost percentage will be calculated against</inlineHelpText>
    <label>Percentage Based On Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>