force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Rule_Based_On_Field__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Rule_Based_On_Field__c</fullName>
    <inlineHelpText>The API Name of the field at client group that the high and low bands will be based on</inlineHelpText>
    <label>Rule Based On Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>