force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Rule_Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Rule_Execution_Order__c</fullName>
    <formula>CASE( RecordType.Name, 
    &apos;Supplier Deposit Payment&apos;, 1, 
    &apos;Supplier Balance Payment&apos;, 2, 
    3 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>