force-app/main/default/objects/sugati__Rule__c/fields/sugati__S_R_Specific_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_R_Specific_Due_Date__c</fullName>
    <label>Specific Due Date</label>
    <type>Date</type>
</CustomField>