force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Additional_Cost.recordType-meta.xml
<RecordType>
    <fullName>sugati__Additional_Cost</fullName>
    <active>true</active>
    <label>Additional Cost</label>
</RecordType>