force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Cancellation.recordType-meta.xml
<RecordType>
    <fullName>sugati__Cancellation</fullName>
    <active>true</active>
    <description>Booking Cancellation Rules</description>
    <label>Cancellation</label>
</RecordType>