force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Client_Deposit.recordType-meta.xml
<RecordType>
    <fullName>sugati__Client_Deposit</fullName>
    <active>true</active>
    <label>Client Deposit</label>
</RecordType>