force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Client_Payment.recordType-meta.xml
<RecordType>
    <fullName>sugati__Client_Payment</fullName>
    <active>true</active>
    <label>Client Payment</label>
</RecordType>