force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Deposit.recordType-meta.xml
<RecordType>
    <fullName>sugati__Deposit</fullName>
    <active>true</active>
    <description>To calculate Agent and Client Booking Deposit</description>
    <label>Deposit</label>
</RecordType>