force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Supplier_Balance_Payment.recordType-meta.xml
<RecordType>
    <fullName>sugati__Supplier_Balance_Payment</fullName>
    <active>true</active>
    <label>Supplier Balance Payment</label>
</RecordType>