force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Supplier_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>sugati__Supplier_Cancellation</fullName>
    <active>true</active>
    <label>Supplier Cancellation</label>
</RecordType>