force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Supplier_Deposit.recordType-meta.xml
<RecordType>
    <fullName>sugati__Supplier_Deposit</fullName>
    <active>false</active>
    <label>Supplier Deposit</label>
</RecordType>