force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Supplier_Deposit_Payment.recordType-meta.xml
<RecordType>
    <fullName>sugati__Supplier_Deposit_Payment</fullName>
    <active>true</active>
    <label>Supplier Deposit Payment</label>
</RecordType>