force-app/main/default/objects/sugati__Rule__c/recordTypes/sugati__Supplier_Payment.recordType-meta.xml
<RecordType>
    <fullName>sugati__Supplier_Payment</fullName>
    <active>false</active>
    <label>Supplier Payment</label>
</RecordType>