force-app/main/default/objects/sugati__Rule__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__R_Percentage__c</columns>
    <columns>sugati__R_Days_to_Departure_From__c</columns>
    <columns>sugati__R_Days_to_Departure_To__c</columns>
    <columns>sugati__R_Deposit_Only__c</columns>
    <columns>sugati__R_Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>