force-app/main/default/objects/sugati__Rule__c/listViews/sugati__Cancellation.listView-meta.xml
<ListView>
    <fullName>sugati__Cancellation</fullName>
    <columns>NAME</columns>
    <columns>sugati__R_Percentage__c</columns>
    <columns>sugati__S_R_Amount__c</columns>
    <columns>sugati__Related_Components__c</columns>
    <columns>sugati__Base_Cancellation_Fee_On__c</columns>
    <columns>sugati__S_R_Percent_Value__c</columns>
    <columns>sugati__R_Days_to_Departure_From__c</columns>
    <columns>sugati__R_Days_to_Departure_To__c</columns>
    <columns>sugati__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sugati__Rule__c.sugati__Cancellation</value>
    </filters>
    <label>Cancellation</label>
</ListView>